# NHANES

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
output/paxraw/: 02_algorithm_development.html  03_analysis-2003-2004.html  03_analysis-2005-2006.html  04_analyze_steps.html
references/: all_nhanes_cohorts.md  linked_mortality_vintages.md  saving_charts.md
research_agents/: README.md  phenoage_train_2015.csv  results_agent10_r_5sd_variants.md  results_agent11_r_completeness.md  results_agent12_r_weights.md  results_agent13_r_winsorize.md  results_agent14_r_remove_extremes.md  results_agent15_r_glucose_focus.md  results_agent16_r_multivar_caps.md  results_agent1_flexsurv.md  results_agent2_glucose.md  results_agent3_optimizer.md  results_agent3_robust.md  results_agent4_sample.md  results_agent5_2015_deaths.md  results_agent6_2015_glucose.md  results_agent7_2015_flexsurv.md  results_agent8_2015_allcause.md  results_agent9_r_mort_variants.md
src/download/: download_nhanes_files.py  scrape_nhanes_manifest.py
src/m3s_variables/: constants.py  generate_M3S_NHANES_dataset.py  lemurs.py  main.py  nhanes_iii.py  raw_correlations.py  test_util.py  util.py
src/parse_lmf/: parse_lmf.py
src/paxraw/: 01_pipeline.ipynb  02_algorithm_development.ipynb  03_analysis.ipynb  04_analyze_steps.ipynb  2003-2004-run.ipynb  2005-2006-run.ipynb  format.sh  main.ipynb  simple_valid_days_algorithm.py  utils.py
src/phenoage/: REPRODUCTION_NOTES.md  __main__.py  constants.py  load_data.py  (+2 more)
stubs/: altair.pyi  altair_saver.pyi
(+12 files in other folders)
