[project]
name = "nhanes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair",
    "numpy>2",
    "pandas>2",
    "pyarrow",
    "vl-convert-python",
]

[project.optional-dependencies]
paxraw = [
    "click",
    "ipykernel",
    "numba",
    "python-dotenv",
    "statsmodels",
    "tqdm",
    "vegafusion[embed]",
]
