[project]
name = "nhanes"
version = "0.1.0"
description = "NHANES data processing: accelerometry, LifeScore mortality scoring, and PhenoAge biological aging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair",
    "matplotlib>=3.10.8",
    "numpy>2",
    "pandas>2",
    "pyarrow",
    "pypdf>=6.9.2",
    "scikit-learn>=1.8.0",
    "scikit-survival>=0.27.0",
    "scipy",
    "shap>=0.51.0",
    "tabpfn>=7.0",
    "vl-convert-python",
]

[project.optional-dependencies]
paxraw = [
    "click",
    "ipykernel",
    "numba",
    "python-dotenv",
    "statsmodels",
    "tqdm",
    "vegafusion[embed]",
]
